renaming floor-plan page - globally changes

--- a/account-notifications.html
+++ b/account-notifications.html
@@ -674,7 +674,7 @@
                                                     marketing emails
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="undefinedEMAIL-row-title"
@@ -2395,7 +2395,7 @@
                             Email
                           </div>
                         </div>
-                        <div class="_1mqc21n">
+                        <div class="become-a-host__count-action-wrapper">
                           <button
                             aria-checked="true"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-title"
@@ -2444,7 +2444,7 @@
                             SMS
                           </div>
                         </div>
-                        <div class="_1mqc21n">
+                        <div class="become-a-host__count-action-wrapper">
                           <button
                             aria-checked="false"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-title"
@@ -2474,7 +2474,7 @@
                             Phone calls
                           </div>
                         </div>
-                        <div class="_1mqc21n">
+                        <div class="become-a-host__count-action-wrapper">
                           <button
                             aria-checked="false"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-title"
@@ -2504,7 +2504,7 @@
                             Browser notifications
                           </div>
                         </div>
-                        <div class="_1mqc21n">
+                        <div class="become-a-host__count-action-wrapper">
                           <button
                             aria-checked="false"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-title"
