--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -544,7 +544,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="become-a-host__count-action-wrapper">
                                     <span class="explore-filter-menu__list-content"
                                       ><input
                                         type="checkbox"
