--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -1422,11 +1422,9 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     </span>
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
-                                                  <span
-                                                    class="explore-filter-menu__list-content"
-                                                  >
-                                                    <input
+                                                <div class="become-a-host__count-action-wrapper">
+                                                  <span class="explore-filter-menu__list-content"
+                                                    ><input
                                                       aria-labelledby="underTwo-row-title"
                                                       id="underTwo-row-checkbox"
                                                       class="form__check-input"
@@ -1518,11 +1516,9 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     experience.
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
-                                                  <span
-                                                    class="explore-filter-menu__list-content"
-                                                  >
-                                                    <input
+                                                <div class="become-a-host__count-action-wrapper">
+                                                  <span class="explore-filter-menu__list-content"
+                                                    ><input
                                                       aria-labelledby="Tag:4804-row-title"
                                                       aria-describedby="Tag:4804-row-subtitle"
                                                       id="Tag:4804-row-checkbox"
@@ -1575,11 +1571,9 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     provide.
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
-                                                  <span
-                                                    class="explore-filter-menu__list-content"
-                                                  >
-                                                    <input
+                                                <div class="become-a-host__count-action-wrapper">
+                                                  <span class="explore-filter-menu__list-content"
+                                                    ><input
                                                       aria-labelledby="Tag:4802-row-title"
                                                       aria-describedby="Tag:4802-row-subtitle"
                                                       id="Tag:4802-row-checkbox"
@@ -1631,11 +1625,9 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     senses of guests.
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
-                                                  <span
-                                                    class="explore-filter-menu__list-content"
-                                                  >
-                                                    <input
+                                                <div class="become-a-host__count-action-wrapper">
+                                                  <span class="explore-filter-menu__list-content"
+                                                    ><input
                                                       aria-labelledby="Tag:4805-row-title"
                                                       aria-describedby="Tag:4805-row-subtitle"
                                                       id="Tag:4805-row-checkbox"
@@ -1975,11 +1967,9 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     </span>
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
-                                                  <span
-                                                    class="explore-filter-menu__list-content"
-                                                  >
-                                                    <input
+                                                <div class="become-a-host__count-action-wrapper">
+                                                  <span class="explore-filter-menu__list-content"
+                                                    ><input
                                                       aria-labelledby="requireIdVerification-row-title"
                                                       id="requireIdVerification-row-checkbox"
                                                       class="form__check-input"
