--- a/online-experience.html
+++ b/online-experience.html
@@ -1113,7 +1113,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Rinaldo is a Superhost
                                                   </div>
@@ -1145,7 +1145,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Great check-in experience
                                                   </div>
@@ -1176,7 +1176,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Dive right in
                                                   </div>
@@ -9643,7 +9643,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="_1qsawv5">
                                                       Rinaldo is a Superhost
                                                     </div>
@@ -9676,7 +9676,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="_1qsawv5">
                                                       Great check-in experience
                                                     </div>
@@ -9707,7 +9707,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="_1qsawv5">
                                                       Dive right in
                                                     </div>
