--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -576,7 +576,7 @@
                                                       Current credit balance
                                                     </div>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="resolution__reservation-continer-text">
                                                       $0.00
                                                     </div>
@@ -633,7 +633,7 @@
                                                       Your coupons
                                                     </div>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="resolution__reservation-continer-text">0</div>
                                                   </div>
                                                 </div>
@@ -1351,7 +1351,7 @@
                                                       Current credit balance
                                                     </div>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="resolution__reservation-continer-text">
                                                       $0.00
                                                     </div>
@@ -1408,7 +1408,7 @@
                                                       Your coupons
                                                     </div>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="resolution__reservation-continer-text">0</div>
                                                   </div>
                                                 </div>
