--- a/products.html
+++ b/products.html
@@ -1805,7 +1805,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Rinaldo is a Superhost
                                                   </div>
@@ -1837,7 +1837,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Great check-in experience
                                                   </div>
@@ -1868,7 +1868,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Dive right in
                                                   </div>
@@ -9672,7 +9672,7 @@
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="_1qsawv5">
                                                       Rinaldo is a Superhost
                                                     </div>
@@ -9705,7 +9705,7 @@
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="_1qsawv5">
                                                       Great check-in experience
                                                     </div>
@@ -9736,7 +9736,7 @@
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="_1qsawv5">
                                                       Dive right in
                                                     </div>
