--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1227,7 +1227,7 @@
                                         have a confirmation code
                                       </div>
                                     </div>
-                                    <div class="_1mqc21n">
+                                    <div class="become-a-host__count-action-wrapper">
                                       <button
                                         aria-checked="false"
                                         aria-labelledby="partner-switch-row-title"
