--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -167,10 +167,10 @@
                     <div class="become-a-host__right-content-wrap" style="transition: opacity 0.6s">
                       <div class="become-a-host__right-wrap">
                         <span style="font-size: 0"></span>
-                        <div class="_1ty0t5n" id="FMP-target">
-                          <div class="_s942vn">
+                        <div class="become-a-host__count" id="FMP-target">
+                          <div class="become-a-host__count-wrapper">
                             <div
-                              class="_5qr45p2"
+                              class="become-a-host__count-card"
                               style="animation-delay: 400ms"
                             >
                               <div
@@ -189,7 +189,7 @@
                                       <div class="_8u4omh">Guests</div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="become-a-host__count-action-wrapper">
                                     <div
                                       class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--0-stepper"
@@ -267,7 +267,7 @@
                               </div>
                             </div>
                             <div
-                              class="_5qr45p2"
+                              class="become-a-host__count-card"
                               style="animation-delay: 449.7412007086385ms"
                             >
                               <div
@@ -286,7 +286,7 @@
                                       <div class="_8u4omh">Beds</div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="become-a-host__count-action-wrapper">
                                     <div
                                       class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--1-stepper"
@@ -364,7 +364,7 @@
                               </div>
                             </div>
                             <div
-                              class="_5qr45p2"
+                              class="become-a-host__count-card"
                               style="animation-delay: 497.9674649614837ms"
                             >
                               <div
@@ -383,7 +383,7 @@
                                       <div class="_8u4omh">Bedrooms</div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="become-a-host__count-action-wrapper">
                                     <div
                                       class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--2-stepper"
@@ -461,7 +461,7 @@
                               </div>
                             </div>
                             <div
-                              class="_5qr45p2"
+                              class="become-a-host__count-card"
                               style="animation-delay: 543.3429593403143ms"
                             >
                               <div
@@ -480,7 +480,7 @@
                                       <div class="_8u4omh">Bathrooms</div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="become-a-host__count-action-wrapper">
                                     <div
                                       class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--3-stepper"
