--- a/products-luxe.html
+++ b/products-luxe.html
@@ -767,7 +767,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Rinaldo is a Superhost
                                                   </div>
@@ -799,7 +799,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Great check-in experience
                                                   </div>
@@ -830,7 +830,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Dive right in
                                                   </div>
