--- a/reviews.html
+++ b/reviews.html
@@ -387,7 +387,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="become-a-host__count-action-wrapper">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_very_high-row-title"
@@ -466,7 +466,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="become-a-host__count-action-wrapper">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_high-row-title"
@@ -545,7 +545,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="become-a-host__count-action-wrapper">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_neutral-row-title"
@@ -624,7 +624,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="become-a-host__count-action-wrapper">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_low-row-title"
@@ -703,7 +703,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="become-a-host__count-action-wrapper">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_very_low-row-title"
