renaming floor-plan page - globally changes

--- a/online-experience.html
+++ b/online-experience.html
@@ -1113,7 +1113,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Rinaldo is a Superhost
                                                   </div>
@@ -1145,7 +1145,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Great check-in experience
                                                   </div>
@@ -1176,7 +1176,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="become-a-host__count-action-wrapper">
                                                   <div class="_1qsawv5">
                                                     Dive right in
                                                   </div>
@@ -8257,7 +8257,7 @@
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="_1qsawv5">
                                                       Rinaldo is a Superhost
                                                     </div>
@@ -8290,7 +8290,7 @@
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="_1qsawv5">
                                                       Great check-in experience
                                                     </div>
@@ -8321,7 +8321,7 @@
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <div class="_1qsawv5">
                                                       Dive right in
                                                     </div>
