--- a/edit/what.html
+++ b/edit/what.html
@@ -694,7 +694,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                       backyard
                                                     </div>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <input
                                                       aria-labelledby="ONLINE_QUESTION-0-radio-row-row-title"
                                                       aria-describedby="ONLINE_QUESTION-0-radio-row-row-subtitle"
@@ -732,7 +732,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                       tourist attraction
                                                     </div>
                                                   </div>
-                                                  <div class="_1mqc21n">
+                                                  <div class="become-a-host__count-action-wrapper">
                                                     <input
                                                       aria-labelledby="ONLINE_QUESTION-1-radio-row-row-title"
                                                       aria-describedby="ONLINE_QUESTION-1-radio-row-row-subtitle"
